# rust-projects

./: .gitignore  .gitmodules  Cargo.toml  README.md
acerola-jam-0/: Cargo.toml  ideas.md
acerola-jam-0/.cargo/: config.toml
acerola-jam-0/assets/sprites/: backgrounds.aseprite  cards.aseprite  panel.aseprite  suits.aseprite
acerola-jam-0/src/: cards.rs  main.rs
arduino-8x8-matrix/: Cargo.toml  README.md  rust-toolchain.toml
arduino-8x8-matrix/src/: main.rs
arduino-avrdude/: Cargo.toml  README.md
arduino-avrdude/src/: main.rs
arduino-rgb/: Cargo.toml
arduino-rgb/src/: main.rs  panic.rs
arduino-seven-segment/: Cargo.toml  README.md
arduino-seven-segment/src/: console.rs  countdown.rs  cycle.rs  main.rs  millis.rs  panic.rs
arduino-seven-sequence/: Cargo.toml
arduino-seven-sequence/src/: characters.rs  color_led.rs  display.rs  main.rs  millis.rs  print.rs
bevy-jam-4/: Cargo.toml
bevy-jam-4/src/: main.rs
bevy-tutorial/: Cargo.toml
bevy-tutorial/src/: events.rs  main.rs  systems.rs  utils.rs
bevy-tutorial/src/enemy/: components.rs  mod.rs  resources.rs  systems.rs
bevy-tutorial/src/game/: mod.rs  system_sets.rs  systems.rs
bevy-tutorial/src/game/enemy/: mod.rs  systems.rs
bevy-tutorial/src/game/player/: mod.rs  systems.rs
bevy-tutorial/src/game/score/: mod.rs  resources.rs  systems.rs
bevy-tutorial/src/game/star/: mod.rs  resources.rs  systems.rs
bevy-tutorial/src/main_menu/: components.rs  mod.rs  styles.rs
bevy-tutorial/src/main_menu/systems/: interactions.rs  layout.rs
bevy-tutorial/src/player/: mod.rs  systems.rs
bevy-tutorial/src/score/: mod.rs  systems.rs
bevy-tutorial/src/star/: components.rs  mod.rs  systems.rs
book/chapter_3/functions/src/: main.rs
book/chapter_3/practice_fibonacci/: Cargo.toml
book/chapter_3/practice_fibonacci/src/: main.rs
book/chapter_3/practice_lyrics/: Cargo.toml
book/chapter_3/practice_lyrics/src/: main.rs  strings.rs
book/chapter_3/practice_temperature/src/: main.rs  temp_formats.rs
book/chapter_5/rectangles/src/: main.rs  tuples.rs
book/hello-rust/src/: main.rs
bool-expr/: Cargo.toml
bool-expr/src/: expressions.rs  main.rs
branches/src/: main.rs
bullet-game/: .lldbinit  Cargo.toml  notes.txt
bullet-game/.cargo/: config.toml
bullet-game/assets/: scene_backdrop_test.aseprite  simple bullet.aseprite  simple flyer.aseprite  spewer.aseprite
bullet-game/src/: main.rs
chapter_12/minigrep/src/: lib.rs  main.rs
chapter_3/practice_fibonacci/: Cargo.toml
chapter_3/practice_fibonacci/src/: main.rs
chapter_3/practice_lyrics/src/: main.rs
chapter_3/practice_temperature/: Cargo.toml
chapter_3/practice_temperature/src/: conversion.rs  functions.rs  temp_formats.rs
chapter_3/practices_c3/src/: conversion.rs
chapter_5/rectangles/src/: parameters.rs  structs.rs
cupon/: Cargo.toml
cupon/src/: main.rs
digit-assignment/: Cargo.toml
digit-assignment/src/: main.rs
fff-live-tracker/: Cargo.toml  rss
fff-live-tracker/src/: main.rs
gizmo-jam/: Cargo.toml
gizmo-jam/.cargo/: config.toml
gizmo-jam/assets/: drill.aseprite  sketch.aseprite
gizmo-jam/src/: main.rs
guessing_game/src/: main.rs
hello-rust/src/: main.rs
hosts-watch/: Cargo.toml  build.rs
hosts-watch/src/: config.rs  main.rs
hosts-watch/tests/: Haaukins (with 2 hosts).htm  Haaukins.htm  integration_test.rs
hosts-watch/tests/Haaukins (with 2 hosts)_files/: main.769c6ab1.css
hosts-watch/tests/Haaukins_files/: main.64f368d7.js
ical-rehoster/: Cargo.toml  latest_processed.ical  newest_response.ical
ical-rehoster/src/: main.rs
ical-rehoster/src/calendar/: filtering.rs  mod.rs
k-map/: Cargo.toml
k-map/src/: expressions.rs  main.rs  maps.rs
learn-wgpu/: Cargo.toml  index.html
learn-wgpu/src/: lib.rs  main.rs
loops/src/: examples.rs  main.rs
minesweeper-thing/: Cargo.toml
minesweeper-thing/assets/sprites/: palette.aseprite  tiles.aseprite
minesweeper-thing/board_plugin/: Cargo.toml
minesweeper-thing/board_plugin/src/: bounds.rs  events.rs  lib.rs
minesweeper-thing/board_plugin/src/components/: bomb.rs  bomb_neighbor.rs  coordinates.rs  mod.rs  uncover.rs
minesweeper-thing/board_plugin/src/resources/: board.rs  board_options.rs  mod.rs  tile.rs  tile_map.rs
minesweeper-thing/board_plugin/src/systems/: input.rs  uncover.rs
minesweeper-thing/src/: main.rs  states.rs
minesweeper-thing/src/game/: components.rs  events.rs  mod.rs  resources.rs  states.rs  systems.rs
open-ai/: Cargo.toml
open-ai/src/: chatgpt.rs  dalle.rs  main.rs
practices_C3/: Cargo.toml
practices_C3/src/: conversion.rs  main.rs
practices_C3/src/conversion/: functions.rs
practices_c3/: Cargo.toml
practices_c3/src/: conversion.rs  main.rs
practices_c3/src/conversion/: functions.rs
proshop-requests/: Cargo.toml
proshop-requests/src/: main.rs
rp-matrix-led/: Cargo.toml  rust-toolchain.toml
rp-matrix-led/.cargo/: config.toml
rp-matrix-led/src/: main.rs  matrix_led.rs  shift_register.rs
rp-pico-8x8-matrix/: Cargo.toml  rust-toolchain.toml
rp-pico-8x8-matrix/src/: main.rs
rp-pico-setup/: Cargo.toml  rust-toolchain.toml
rp-pico-setup/src/: main.rs
rp-shift-register/: Cargo.toml
rp-shift-register/src/: main.rs  rgb_led.rs  seven_segment.rs  shift_register.rs
snake/: Cargo.toml
snake/src/: main.rs
snake_game/: Cargo.toml
snake_game/src/: main.rs
time-assignment/: Cargo.toml
time-assignment/src/: main.rs
variables/src/: main.rs
wanna-jam-game/: Cargo.toml
wanna-jam-game/.cargo/: config.toml
wanna-jam-game/src/: main.rs
web-update-watch/: Cargo.toml
web-update-watch/src/: main.rs
yew-app/: Cargo.toml  index.html
yew-app/src/: main.rs  video.rs
