[package]
name = "acerola-jam-0"
version = "0.1.0"
edition = "2021"

# fast iteration
[profile.dev]
debug = 0           # none
strip = "debuginfo"
opt-level = 1       # seemingly *has* to be 1 on windows?

# full debug info
[profile.debuggable]
inherits = "dev"
debug = 2        # full
strip = "none"
opt-level = 0    # opt level can break stepping flow?
# https://bevy-cheatbook.github.io/pitfalls/performance.html#unoptimized-debug-builds

[profile.dev.package."*"]
inherits = "fast-dependency"

[profile.debuggable.package."*"]
inherits = "fast-dependency"

[dev-dependencies]
static_assertions = "1.1"

[dependencies]
bevy = "0.13"
rand = "0.8"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.12"
enumflags2 = { version = "0.7", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }

[features]
#default = ["bevy/dynamic_linking"]
