[package]
name = "bullet-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.optimized]
inherits = "release"
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

[dependencies]
bevy = { version = "0.12.1" }
itertools = "0.12"

[features]
default = ["bevy/dynamic_linking"]