[package]
name = "ical-rehoster"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12"
ical = { version = "0.11", features = ["serde-derive", "generator"] }
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "macros"] }
axum = { version = "0.7", features = ["macros"] }
clap = "4.5"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.81"
chrono = "0.4"