[package]
name = "minesweeper-thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# project is using inspiration/guidance from https://dev.to/qongzi/series/16975 (minesweeper tutorial series in bevy)

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["debug"]
debug = []

[dependencies]
bevy = { version = "0.11", features = ["serialize", "dynamic_linking"] }
lazy_static = "1.4"
rand = "0.8"
bevy-inspector-egui = "0.19"
