[package]
name = "open-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-openai = "0.10.0"
# enum-as-inner = "0.5.1"
linefeed = "0.6.0"
open = "4.0.1"
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread", "macros"] }
